# ComputationalArchive

./: .dvcignore  .env.dvc  .gitignore  .gitmodules  Home.md  Python.md  README.md  download.dvc  dvc.yaml  papers.dvc  projects.dvc  pyproject.toml
.dvc/: config
ETC/: 개인정보보호-리포트.md
Langs/C/: README.html  README.md  basic.c  int_main
Langs/CSS3/: github-markdown.css
Langs/HTML5/: README.md
Langs/Python/: README.html  README.md
Langs/Python/VSL/: liblist.md
Langs/R/: README.html  README.md
Langs/SQL/: README.md  bigquery_sql.py
Programming/basic/: README.md
Programming/data/: README.md  bigquery_sql.py
Programming/trial/: basic  int_main.c  liblist.md  matplotlib.ipynb
Tools/GCP/: README.md  path.md
benchmark/: projects.dvc
database/rdbms/: bigquery_legacysql.sql
docs/: CNAME  GCP-note.md  Home.md  MLOps.md  Python-basic.md  Python-logger.md  _Sidebar.md
docs/cs/: SIPaaS.md  VersionControl.md  WAS-WebServer.md  testing.md
language/command/: dvc.sh
language/python/docs/: data.md
language/python/docs/base/: 0-variable.md
language/python/script/: init.sh  start.sh
language/python/src/: AnnotsCheck.py  image_processing.py  text.py
wiki/: _Sidebar.md
