[tool.poetry]
name = "computationalarchive"
version = "0.1.0"
description = ""
authors = ["AshbeeKim <co_m@gnu.ac.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
