[tool.poetry]
name = "computationalarchive"
version = "0.1.0"
description = ""
authors = ["AshbeeKim <co_m@gnu.ac.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"
pandas-datareader = "^0.10.0"
requests-cache = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
